# iroha-javascript

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  CONTRIBUTING.md  README.md  Releases.md  SECURITY.md  deno.jsonc  jakefile.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.mts
.changeset/: config.json  eleven-toys-buy.md  wild-snails-kick.md
.github/workflows/: pull-request.yml
crypto-wasm/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crypto-wasm/src/: lib.rs  utils.rs
etc/: codegen.spec.ts  codegen.ts  codegen_test.ts  iroha-build-utils.ts  jakefile.js  jakefile.ts  meta-crypto.ts  meta.ts  task-codegen.ts  task-prep-crypto-wasm.ts  task-prep-iroha.ts  task-publish.ts  typedoc.config.ts  util.ts
etc/__snapshots__/: codegen_test.ts.snap
tests/: .npmrc  pnpm-lock.yaml  pnpm-workspace.yaml
tests/browser/: deno.jsonc  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tests/browser/etc/: meta.ts  run-peer-server.ts  serve-peer.ts  test-run.ts
tests/browser/src/: App.vue  client.ts  setup-crypto.ts
tests/interfaces/: package.json
tests/interfaces/test/: main.ts
tests/node/: README.md  deno.jsonc  package.json  tsconfig.json  vitest.config.mts
tests/node/tests/: client-apis.spec.ts  client-misc.spec.ts  codec-compat.spec.ts  crypto-run.cjs  crypto.spec-d.ts  crypto.spec.ts  setup.ts  util.ts
tests/support/iroha-source/: build-bins.ts  deno.jsonc  meta.ts  mod.ts  package.json
tests/support/test-configuration/: deno.jsonc  mod.ts  node.ts  package.json
(+22 files in other folders)
