[package]
name = "iroha_crypto_wasm"
version = "0.2.0"
authors = ["0x009922"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# iroha_crypto = { path = "../.iroha/crates/iroha_crypto", default-features = false, features = ["rand"] }
iroha_crypto = { git = "https://github.com/hyperledger-iroha/iroha.git", rev = "daa2d50fbe288aed1231c6f45c853698435477d6", default-features = false, features = ["rand"] }

getrandom = { version = "0.2", features = ["js"] }

wasm-bindgen = "0.2.100"
serde = { version = "1", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.6"
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5" }

[profile.release]
opt-level = "z"
lto = true

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
serde_json = "1.0"
itertools = "0.12.1"
